--- a/mainpage.html
+++ b/mainpage.html
@@ -9,10 +9,10 @@
     <a href="nothing.html">Пустота</a> <br>
 </nav>
 <hr>
-<body backgroung="">
+<body background="images/bg_main.png">
     <h1 align="center">Тема</h1>
-<hr>
-<p>Краткое описание</p>
+    <hr>
+    <p>Краткое описание</p>
     <p>
         <a href="link_1.html"><img src="images/image_1.png" alt="" width="100" height="100" hspace="10" align = 'middle'></a>
         <font><b>Название изображения</b></font>
